@@ -7,6 +7,9 @@
 - Support for Python 3 has been added.  On Python 3, Superlance
   now requires Python 3.2 or later.
 
+- ``httpok`` now allows multiple expected status codes to be specified.  Patch
+  by valmiRe.
+
 0.12 (2016-09-03)
 -----------------
 
